This commit makes changes in the base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-  <a href={% url "home" %}><h1 class="logo text-center">Calorie Drive</h1></a>
+  <a href={% url "home" %}><h1 class="logo text-center">CALORIE WEB APP</h1></a>
   
 <nav id="navbar-primary" class="navbar navbar-expand-lg navbar-default active" role="navigation">
   
