--- a/templates/base.html
+++ b/templates/base.html
@@ -5,17 +5,17 @@
 	<title>Calorie App</title>
 	<meta charset="utf-8">
 
-	
-	<link href="{% static 'css/base.css' %}" rel="stylesheet">
-	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	 
 
+	<link href="{% static 'style.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
 </head>
-<body>
-  <a href={% url "home" %}><h1 class="logo text-center">CALORIE WEB APP</h1></a>
+
+<body style="background-color:#5CDB95" >
+  <a href={% url "home" %}><h1 style="font-family:'Times New Roman', Times, serif; color:whitesmoke;" class="logo text-center">CALORIE WEB APP</h1></a>
   
 <nav id="navbar-primary" class="navbar navbar-expand-lg navbar-default active" role="navigation">
   
@@ -43,7 +43,6 @@
       
  </div>
 </nav>
-
 <!-- header role="banner" -->
         {% block content %}
         {% endblock content %}
