--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-
+<body background="/media/bg1.jpg">
+<div class="log2">
     <div class="login">
         <div class="login-screen">
-            <div class="app-title">
-                <h1>Login</h1>
+            <div class="app-title"> 
+                <h1 style="font-family: 'Times New Roman', Times, serif; color: black;"><strong>LOG IN HERE</strong></h1>
             </div>
 
             <form method="POST" action="" class="login-form">
@@ -35,6 +35,6 @@
             </div>
         </div>
     </div>
-  
-
+</div>
+ </body>
 {% endblock content %}
